[package]
name = "envop"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "A CLI for syncing environment variables using 1password"
homepage = "https://github.com/alexanderflink/envop"
repository = "https://github.com/alexanderflink/envop"
readme = "README.md"
exclude = ["npm", "package.json", "package-lock.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
glob = "0.3.0"
inquire = "0.3.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"